# swiftmap

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: shiny_app.py  streamlit_app.py  swiftmap_shiny.py  swiftmap_streamlit.py
swiftmap/: __init__.py  _infra.py  _parser.py  map.py
swiftmap/js/: layers.js  map.css  map.js  shaders.js  sidebar.js  utils.js
swiftmap/layers/: __init__.py  _add_child.py  basemap.py  circle.py  circle_markers.py  geojson.py  markers.py  polygon.py  polyline.py
tests/: test_basic.py
