[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftmap"
version = "0.1.0"
description = "Enhancing ipyleaflet with existing Leaflet addons for Shiny"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipyleaflet>=0.17.0",
    "shinywidgets>=0.2.0",
    "streamlit>=1.20.0",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
