[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftmap"
version = "0.1.0"
description = "Enhancing Leaflet maps with high-performance WebGL overlays and hierarchical controls for Shiny"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anywidget>=0.4.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
include = ["swiftmap*"]
